fix configuration build

--- a/hw02-generics_and_collections/build.gradle
+++ b/hw02-generics_and_collections/build.gradle
@@ -12,11 +12,11 @@ dependencies {
 }
 
 shadowJar {
-    archiveBaseName.set('gradleHW01')
+    archiveBaseName.set('collectionsHW02')
     archiveVersion.set('0.1')
     archiveClassifier.set('')
     manifest {
-        attributes 'Main-Class': 'ru.otus.HelloOtus'
+        attributes 'Main-Class': 'ru.otus.Main'
     }
 }
 
