--- a/settings.gradle
+++ b/settings.gradle
@@ -4,4 +4,5 @@ rootProject.name = 'otusJava'
 include 'hw01-gradle'
 include 'hw02-generics_and_collections'
 include 'hw03-test_framework'
+include 'hw04-garbage_collector'
 
