add dependency, modify method

--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ allprojects {
         mavenCentral()
     }
 
+    apply plugin: 'idea'
     apply plugin: "io.spring.dependency-management"
     dependencyManagement {
         dependencies {
