--- a/settings.gradle
+++ b/settings.gradle
@@ -5,4 +5,5 @@ include 'hw01-gradle'
 include 'hw02-generics_and_collections'
 include 'hw03-test_framework'
 include 'hw04-garbage_collector'
+include 'hw06-ATM_manager'
 
