--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,8 @@ allprojects {
         dependencies {
             dependency("com.google.guava:guava:${Versions.guava}")
             dependency("org.ow2.asm:asm-commons:${Versions.asm}")
+            dependency("org.junit.jupiter:junit-jupiter-api:${Versions.junit}")
+            dependency("org.junit.jupiter:junit-jupiter-engine:${Versions.junit}")
         }
     }
 }
