--- a/hw06-ATM_manager/build.gradle
+++ b/hw06-ATM_manager/build.gradle
@@ -8,7 +8,8 @@ targetCompatibility = JavaVersion.VERSION_13
 
 dependencies {
     // This dependency is used by the application.
-    implementation 'com.google.guava:guava'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 }
 
 shadowJar {
