--- a/hw06-ATM_manager/build.gradle
+++ b/hw06-ATM_manager/build.gradle
@@ -17,7 +17,7 @@ shadowJar {
     archiveVersion.set('0.1')
     archiveClassifier.set('')
     manifest {
-        attributes 'Main-Class': 'ru.otus.ATM'
+        attributes 'Main-Class': 'ru.otus.Main'
     }
 }
 
