change name jar

--- a/hw-07_ATM_Department/build.gradle
+++ b/hw-07_ATM_Department/build.gradle
@@ -17,7 +17,7 @@ dependencies {
 }
 
 shadowJar {
-    archiveBaseName.set('ATMHW07')
+    archiveBaseName.set('ATMDHW07')
     archiveVersion.set('0.1')
     archiveClassifier.set('')
     manifest {
