--- a/hw07-ATM_department/build.gradle
+++ b/hw07-ATM_department/build.gradle
@@ -21,7 +21,7 @@ shadowJar {
     archiveVersion.set('0.1')
     archiveClassifier.set('')
     manifest {
-        attributes 'Main-Class': 'ru.otus.Main'
+        attributes 'Main-Class': 'ru.otus.MainDepartment'
     }
 }
 
