--- a/hw08-json/build.gradle
+++ b/hw08-json/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'com.github.johnrengelman.shadow'
 }
 
 sourceCompatibility = JavaVersion.VERSION_13
@@ -7,7 +8,17 @@ targetCompatibility = JavaVersion.VERSION_13
 
 dependencies {
     // This dependency is used by the application.
-    implementation 'javax.json:javax.json-api'
     implementation 'org.glassfish:javax.json'
+    implementation 'javax.json:javax.json-api:1.1.4'
 }
 
+shadowJar {
+    archiveBaseName.set('JSONHW08')
+    archiveVersion.set('0.1')
+    archiveClassifier.set('')
+    manifest {
+        attributes 'Main-Class': 'ru.otus.JSONMain'
+    }
+}
+
+tasks.build.dependsOn tasks.shadowJar
