--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ allprojects {
             dependency("org.junit.jupiter:junit-jupiter-api:${Versions.junit}")
             dependency("org.junit.jupiter:junit-jupiter-engine:${Versions.junit}")
             dependency("org.glassfish:javax.json:${Versions.glassfishJson}")
+            dependency("com.google.code.gson:gson:${Versions.gson}")
         }
     }
 }
