--- a/hw08-json/build.gradle
+++ b/hw08-json/build.gradle
@@ -6,11 +6,17 @@ plugins {
 sourceCompatibility = JavaVersion.VERSION_13
 targetCompatibility = JavaVersion.VERSION_13
 
+test {
+    useJUnitPlatform()
+}
+
 dependencies {
     // This dependency is used by the application.
     implementation 'org.glassfish:javax.json'
     implementation 'javax.json:javax.json-api:1.1.4'
     implementation 'com.google.code.gson:gson:2.8.6'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 }
 
 shadowJar {
