--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,6 @@ allprojects {
                 mavenBom("org.springframework.boot:spring-boot-dependencies:2.2.6.RELEASE")
             }
             dependency("com.google.guava:guava:${Versions.guava}")
-            dependency("org.openjdk.jol:jol-core:${Versions.jol}")
             dependency("org.ow2.asm:asm-commons:${Versions.asm}")
             dependency("org.junit.jupiter:junit-jupiter-api:${Versions.junit}")
             dependency("org.junit.jupiter:junit-jupiter-engine:${Versions.junit}")
@@ -47,27 +46,12 @@ allprojects {
         }
 
         resolutionStrategy {
+            force("org.opentest4j:opentest4j:1.2.0")
+            force("org.apiguardian:apiguardian-api:1.1.0")
             force("javax.servlet:servlet-api:2.4")
             force("commons-logging:commons-logging:1.1.1")
             force("commons-lang:commons-lang:2.5")
-            force("org.codehaus.jackson:jackson-core-asl:1.8.8")
-            force("org.codehaus.jackson:jackson-mapper-asl:1.8.3")
             force("org.codehaus.jettison:jettison:1.1")
         }
     }
-}
-
-//print versions from BOM
-task managedVersions {
-    doLast {
-        dependencyManagement.managedVersions.each {
-            println it
-        }
-    }
-}
-
-//gradle -q hello
-task hello {
-    println 'Hello world!'
-    println System.getenv('JAVA_HOME')
 }
