--- a/hw09-ORM/build.gradle
+++ b/hw09-ORM/build.gradle
@@ -18,7 +18,7 @@ shadowJar {
     archiveVersion.set('0.1')
     archiveClassifier.set('')
     manifest {
-        attributes 'Main-Class': 'ru.otus.ORMMain'
+        attributes 'Main-Class': 'ru.otus.DbServiceDemo'
     }
 }
 
