--- a/settings.gradle
+++ b/settings.gradle
@@ -9,3 +9,6 @@ include 'hw05-auto_logger'
 include 'hw06-ATM_manager'
 include 'hw07-ATM_department'
 include 'hw08-json'
+
+include 'hw10-Hibernate'
+
