--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,9 @@ allprojects {
     apply plugin: 'idea'
     apply plugin: "io.spring.dependency-management"
     dependencyManagement {
+        imports {
+            mavenBom("org.springframework.boot:spring-boot-dependencies:2.2.6.RELEASE")
+        }
         dependencies {
             dependency("com.google.guava:guava:${Versions.guava}")
             dependency("org.ow2.asm:asm-commons:${Versions.asm}")
