--- a/hw15-threads/build.gradle
+++ b/hw15-threads/build.gradle
@@ -20,6 +20,8 @@ dependencies {
     testImplementation("org.junit.jupiter:junit-jupiter-params")
     testImplementation("org.assertj:assertj-core")
     testImplementation("org.mockito:mockito-junit-jupiter")
+    implementation('ch.qos.logback:logback-classic')
+    implementation('org.slf4j:slf4j-api')
 }
 
 compileJava.options.encoding = 'UTF-8'
