--- a/settings.gradle
+++ b/settings.gradle
@@ -16,3 +16,5 @@ include 'hw12-web_server'
 include 'hw13-dependency_injection'
 include 'hw14-spring_MVC'
 include 'hw15-threads'
+include 'stock-analizer'
+
