--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     //support Idea IDE
     id 'idea'
-    id "io.spring.dependency-management" version "1.0.9.RELEASE"
+    id "io.spring.dependency-management" version "1.0.10.RELEASE"
     // Build uber-jar
     id 'com.github.johnrengelman.shadow' version '5.2.0' apply false
 }
@@ -27,8 +27,10 @@ allprojects {
     dependencyManagement {
         dependencies {
             imports {
-                mavenBom("org.springframework.boot:spring-boot-dependencies:2.3.1.RELEASE")
+                mavenBom("org.springframework.boot:spring-boot-dependencies:2.3.3.RELEASE")
             }
+            dependency("org.springframework.boot:spring-boot-starter-web:2.3.3")
+            dependency("org.springframework.boot:spring-boot-starter-test:2.3.3")
             dependency("com.google.guava:guava:${Versions.guava}")
             dependency("org.openjdk.jol:jol-core:${Versions.jol}")
             dependency("org.ow2.asm:asm-commons:${Versions.asm}")
@@ -51,6 +53,8 @@ allprojects {
             force("org.codehaus.jackson:jackson-mapper-asl:1.8.3")
             force("org.codehaus.jettison:jettison:1.1")
             force("org.javassist:javassist:3.24.0-GA")
+            force("org.apiguardian:apiguardian-api:1.1.0")
+            force("org.opentest4j:opentest4j:1.2.0")
         }
     }
 }
