--- a/stock-analyzer/build.gradle
+++ b/stock-analyzer/build.gradle
@@ -26,11 +26,14 @@ configurations.all {
 }
 
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.3.3.RELEASE'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.3.3.RELEASE'
     implementation group: 'org.postgresql', name : 'postgresql', version: '42.2.16'
     testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.3.3.RELEASE'
+    testImplementation group: 'org.awaitility', name: 'awaitility', version: '3.1.2'
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.3.1'
+    testImplementation group: 'org.springframework.boot', name : 'spring-boot-starter-test', version: '2.3.3.REALESE'
     testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.3.1'
     testCompile group: 'org.hamcrest', name: 'hamcrest-core', version: '1.3'
 }
