--- a/stock-analyzer/src/main/resources/application.yaml
+++ b/stock-analyzer/src/main/resources/application.yaml
@@ -15,3 +15,6 @@ spring:
     driverClassName: org.postgresql.Driver
 schedule:
   fixedRate: 5000
+  alphavantage:
+    apikey: S1RP7VOYRC84TD3Z
+    url: https://www.alphavantage.co/query
