--- a/stock-analyzer/build.gradle
+++ b/stock-analyzer/build.gradle
@@ -33,10 +33,14 @@ dependencies {
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc', version: '2.3.3.RELEASE'
     runtimeOnly group: 'org.postgresql', name : 'postgresql', version: '42.2.16'
     testCompileOnly group: 'org.projectlombok', name: 'lombok'
+    testRuntimeOnly group: 'com.h2database', name: 'h2'
     testAnnotationProcessor group: 'org.projectlombok', name: 'lombok'
-    testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.3.3.RELEASE'
-    testImplementation group: 'org.awaitility', name: 'awaitility', version: '3.1.2'
-    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.3.1'
-    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.3.1'
+    testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.3.3.RELEASE', {
+        exclude group : 'org.junit.vintage', module : 'junit-vintage-engine'
+    }
     testCompile group: 'org.hamcrest', name: 'hamcrest-core', version: '1.3'
+}
+
+test {
+    useJUnitPlatform()
 }
