add properties for load scheme and data in DB

--- a/stock-analyzer/src/main/resources/application.yaml
+++ b/stock-analyzer/src/main/resources/application.yaml
@@ -13,6 +13,8 @@ spring:
     username: stocks
     password: stocks
     driverClassName: org.postgresql.Driver
+    schema: scheme.sql
+    data: data.sql
 schedule:
   fixedRate: 5000
 alphavantage:
